# swanson

./: .env.template  .gitignore  .swanson-protected  BUILD_COMPLETE.md  LICENSE.md  README.md  config.example.json  init.py  prd-schema.md  product-vision.md  pyproject.toml  setup.py  standards.md
.github/workflows/: test-windows.yml
src/swanson/: __init__.py  cli.py  config.py  context_loader.py  executor.py  history_logger.py  init_project.py  loop.py  signal_detector.py  state_manager.py
src/swanson/templates/: prd-schema.md
templates/: BUILD.md  context-map.md  product-vision.md  standards.md
tests/: conftest.py  test_architecture.py
tests/regression/: test_BUG-001.py  test_BUG-002.py  test_BUG-003.py  test_BUG-004.py  test_BUG-006.py  test_BUG-007.py  test_US-001.py  test_US-002.py  test_US-003.py  test_US-004.py
